SLING-10750 update to sling-bundle-parent 44 update dependencies to 2018 (same as used in SLING-10045) update to latest sling-mock eliminate code warnings